--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -3,6 +3,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 3rem;
 
   border-top: 1px solid #aaa;
   background: white;
